# todo_with_tests

./: .gitignore  Dockerfile  Makefile  docker-compose.yml  functional_tests.py  pyproject.toml
.github/workflows/: ci.yml
functional_tests/: tests.py
infra/: deploy-playbook.yaml
lists/: tests.py  urls.py  views.py
lists/migrations/: 0001_initial.py  0002_item_text.py  0003_list.py  0004_item_list.py
lists/templates/: base.html  home.html  list.html
src/accounts/: authentication.py  models.py  urls.py  views.py
src/accounts/migrations/: 0001_initial.py  0002_remove_user_id_alter_user_email.py  0002_token_remove_user_id_alter_user_email.py
src/accounts/tests/: test_authentication.py  test_models.py  test_views.py
src/functional_tests/: base.py  container_commands.py  list_page.py  my_lists_page.py  test_layout_and_styling.py  test_list_item_validation.py  test_login.py  test_my_lists.py  test_sharing.py  test_simple_list_creation.py
src/functional_tests/management/commands/: create_session.py
src/lists/: forms.py  models.py  test_forms.py  tests.py  urls.py  views.py
src/lists/migrations/: 0005_alter_item_unique_together.py  0006_alter_item_options.py  0007_list_owner.py
src/lists/static/: lists.js  package-lock.json  package.json
src/lists/static/tests/: Spec.js  SpecRunner.html  jasmine-browser-runner.config.mjs
src/lists/templates/: base.html  home.html  list.html  my_lists.html
src/lists/templates/includes/: form.html
src/lists/tests/: test_models.py  test_views.py
src/superlists/: settings.py  urls.py
superlists/: settings.py  urls.py
