[project]
name = "learning-tdd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django==5.2.3",
    "gunicorn==25.1.0",
    "python-dotenv==1.2.2",
    "whitenoise==6.12.0",
]
[dependency-groups]
dev = [
    "ansible>=13.4.0",
    "lxml[cssselect]==6.0.2",
    "requests>=2.32.5",
    "selenium==4.41.0",
]
[tool.ruff]
line-length = 100
preview = true
[tool.ruff.format]
quote-style = "single"
[tool.ruff.lint]

ignore = [
    "D1",      # Pydocstyle - missing docstring in public module, class, or function
    "FBT003",  # Flake8-boolean-trap - boolean position value in function call
    "D203",    # Pydocstyle - one blank line required before class docstring
    "D212",    # Pydocstyle - summary line should be immediately after the opening quotes.
    "D401",    # Pydocstyle - Checks for docstring first lines that are not in an imperative mood.
    "S311",    # Flake8-bandit - Standard pseudo-random generators are not suitable for security/cryptographic purposes
    "PERF401", # Perflint - Checks for for loops that can be replaced by a list comprehension.
    "RET504",  # Flake8-return - Checks for variable assignments that immediately precede a return of the assigned variable.
    "FA102",   # Flake8-future-annotations - Missing `from __future__ import annotations`, but uses PEP 604 union
    "TRY003",  # Tryceratops - Checks for long exception messages that are not defined in the exception class itself.
    "EM101",   # Flake8-errmsg - Checks for the use of string literals in exception constructors.
    "S404",    # subprocess import no longer suspicious
    "INP001",  # lack of __init__.py in packages
    "RUF001",  # ambiguous cyrillic symbols
    "COM812",  # no trailing comma
    "RUF003",  # ambiguous symbols in comments
    "E501",    # Pycodestyle - line too long
    "BLE001",
    "S110",
]
